parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> org_file
Rule 1     org_file -> metadata org_tree
Rule 2     org_file -> non_metadata_body_text SEPARATOR org_tree
Rule 3     org_file -> metadata non_metadata_body_text SEPARATOR org_tree
Rule 4     org_file -> org_tree
Rule 5     org_file -> empty
Rule 6     metadata -> METADATA SEPARATOR
Rule 7     org_tree -> heading
Rule 8     org_tree -> heading SEPARATOR
Rule 9     org_tree -> org_tree heading SEPARATOR
Rule 10    org_tree -> org_tree heading
Rule 11    heading -> headline NEWLINE contents
Rule 12    heading -> headline SEPARATOR
Rule 13    headline -> STARS SPACE comment todo priority title cookie tags
Rule 14    comment -> COMMENT SPACE
Rule 15    comment -> empty
Rule 16    todo -> TODO SPACE
Rule 17    todo -> empty
Rule 18    priority -> PRIORITY SPACE
Rule 19    priority -> empty
Rule 20    title -> TEXT
Rule 21    title -> title SPACE TEXT
Rule 22    title -> title SPACE
Rule 23    cookie -> COOKIE SPACE
Rule 24    cookie -> COOKIE
Rule 25    cookie -> empty
Rule 26    tags -> TAGS
Rule 27    tags -> empty
Rule 28    contents -> scheduling drawers body
Rule 29    scheduling_data -> SCHEDULING SPACE any_timestamp NEWLINE
Rule 30    scheduling_data -> SCHEDULING SPACE any_timestamp SEPARATOR
Rule 31    scheduling_data -> SCHEDULING SPACE any_timestamp SPACE
Rule 32    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp NEWLINE
Rule 33    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SEPARATOR
Rule 34    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SPACE
Rule 35    scheduling -> scheduling_data
Rule 36    scheduling -> empty
Rule 37    any_timestamp -> ATIMESTAMP
Rule 38    any_timestamp -> ITIMESTAMP
Rule 39    drawer_data -> DRAWER NEWLINE
Rule 40    drawer_data -> DRAWER SEPARATOR
Rule 41    drawer_data -> drawer_data DRAWER NEWLINE
Rule 42    drawer_data -> drawer_data DRAWER SEPARATOR
Rule 43    drawers -> drawer_data
Rule 44    drawers -> empty
Rule 45    body -> body_text
Rule 46    body -> empty
Rule 47    non_metadata_body_text -> TEXT
Rule 48    non_metadata_body_text -> SPACE
Rule 49    non_metadata_body_text -> any_timestamp
Rule 50    non_metadata_body_text -> non_metadata_body_text TEXT
Rule 51    non_metadata_body_text -> non_metadata_body_text SPACE
Rule 52    non_metadata_body_text -> non_metadata_body_text any_timestamp
Rule 53    non_metadata_body_text -> non_metadata_body_text NEWLINE
Rule 54    body_text -> TEXT
Rule 55    body_text -> SPACE
Rule 56    body_text -> METADATA
Rule 57    body_text -> any_timestamp
Rule 58    body_text -> body_text TEXT
Rule 59    body_text -> body_text SPACE
Rule 60    body_text -> body_text METADATA
Rule 61    body_text -> body_text any_timestamp
Rule 62    body_text -> body_text NEWLINE
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ATIMESTAMP           : 37
COMMENT              : 14
COOKIE               : 23 24
DRAWER               : 39 40 41 42
ITIMESTAMP           : 38
METADATA             : 6 56 60
NEWLINE              : 11 29 32 39 41 53 62
PRIORITY             : 18
SCHEDULING           : 29 30 31 32 33 34
SEPARATOR            : 2 3 6 8 9 12 30 33 40 42
SPACE                : 13 14 16 18 21 22 23 29 30 31 31 32 33 34 34 48 51 55 59
STARS                : 13
TAGS                 : 26
TEXT                 : 20 21 47 50 54 58
TODO                 : 16
error                : 

Nonterminals, with rules where they appear

any_timestamp        : 29 30 31 32 33 34 49 52 57 61
body                 : 28
body_text            : 45 58 59 60 61 62
comment              : 13
contents             : 11
cookie               : 13
drawer_data          : 41 42 43
drawers              : 28
empty                : 5 15 17 19 25 27 36 44 46
heading              : 7 8 9 10
headline             : 11 12
metadata             : 1 3
non_metadata_body_text : 2 3 50 51 52 53
org_file             : 0
org_tree             : 1 2 3 4 9 10
priority             : 13
scheduling           : 28
scheduling_data      : 32 33 34 35
tags                 : 13
title                : 13 21 22
todo                 : 13

Parsing method: LALR

state 0

    (0) S' -> . org_file
    (1) org_file -> . metadata org_tree
    (2) org_file -> . non_metadata_body_text SEPARATOR org_tree
    (3) org_file -> . metadata non_metadata_body_text SEPARATOR org_tree
    (4) org_file -> . org_tree
    (5) org_file -> . empty
    (6) metadata -> . METADATA SEPARATOR
    (47) non_metadata_body_text -> . TEXT
    (48) non_metadata_body_text -> . SPACE
    (49) non_metadata_body_text -> . any_timestamp
    (50) non_metadata_body_text -> . non_metadata_body_text TEXT
    (51) non_metadata_body_text -> . non_metadata_body_text SPACE
    (52) non_metadata_body_text -> . non_metadata_body_text any_timestamp
    (53) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (7) org_tree -> . heading
    (8) org_tree -> . heading SEPARATOR
    (9) org_tree -> . org_tree heading SEPARATOR
    (10) org_tree -> . org_tree heading
    (63) empty -> .
    (37) any_timestamp -> . ATIMESTAMP
    (38) any_timestamp -> . ITIMESTAMP
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    METADATA        shift and go to state 6
    TEXT            shift and go to state 7
    SPACE           shift and go to state 8
    $end            reduce using rule 63 (empty -> .)
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12
    STARS           shift and go to state 14

    org_file                       shift and go to state 1
    metadata                       shift and go to state 2
    org_tree                       shift and go to state 3
    non_metadata_body_text         shift and go to state 4
    empty                          shift and go to state 5
    any_timestamp                  shift and go to state 9
    heading                        shift and go to state 10
    headline                       shift and go to state 13

state 1

    (0) S' -> org_file .



state 2

    (1) org_file -> metadata . org_tree
    (3) org_file -> metadata . non_metadata_body_text SEPARATOR org_tree
    (7) org_tree -> . heading
    (8) org_tree -> . heading SEPARATOR
    (9) org_tree -> . org_tree heading SEPARATOR
    (10) org_tree -> . org_tree heading
    (47) non_metadata_body_text -> . TEXT
    (48) non_metadata_body_text -> . SPACE
    (49) non_metadata_body_text -> . any_timestamp
    (50) non_metadata_body_text -> . non_metadata_body_text TEXT
    (51) non_metadata_body_text -> . non_metadata_body_text SPACE
    (52) non_metadata_body_text -> . non_metadata_body_text any_timestamp
    (53) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (37) any_timestamp -> . ATIMESTAMP
    (38) any_timestamp -> . ITIMESTAMP
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    TEXT            shift and go to state 7
    SPACE           shift and go to state 8
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12
    STARS           shift and go to state 14

    org_tree                       shift and go to state 15
    non_metadata_body_text         shift and go to state 16
    heading                        shift and go to state 10
    any_timestamp                  shift and go to state 9
    headline                       shift and go to state 13

state 3

    (4) org_file -> org_tree .
    (9) org_tree -> org_tree . heading SEPARATOR
    (10) org_tree -> org_tree . heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 4 (org_file -> org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 4

    (2) org_file -> non_metadata_body_text . SEPARATOR org_tree
    (50) non_metadata_body_text -> non_metadata_body_text . TEXT
    (51) non_metadata_body_text -> non_metadata_body_text . SPACE
    (52) non_metadata_body_text -> non_metadata_body_text . any_timestamp
    (53) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (37) any_timestamp -> . ATIMESTAMP
    (38) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 18
    TEXT            shift and go to state 19
    SPACE           shift and go to state 20
    NEWLINE         shift and go to state 22
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12

    any_timestamp                  shift and go to state 21

state 5

    (5) org_file -> empty .

    $end            reduce using rule 5 (org_file -> empty .)


state 6

    (6) metadata -> METADATA . SEPARATOR

    SEPARATOR       shift and go to state 23


state 7

    (47) non_metadata_body_text -> TEXT .

    SEPARATOR       reduce using rule 47 (non_metadata_body_text -> TEXT .)
    TEXT            reduce using rule 47 (non_metadata_body_text -> TEXT .)
    SPACE           reduce using rule 47 (non_metadata_body_text -> TEXT .)
    NEWLINE         reduce using rule 47 (non_metadata_body_text -> TEXT .)
    ATIMESTAMP      reduce using rule 47 (non_metadata_body_text -> TEXT .)
    ITIMESTAMP      reduce using rule 47 (non_metadata_body_text -> TEXT .)


state 8

    (48) non_metadata_body_text -> SPACE .

    SEPARATOR       reduce using rule 48 (non_metadata_body_text -> SPACE .)
    TEXT            reduce using rule 48 (non_metadata_body_text -> SPACE .)
    SPACE           reduce using rule 48 (non_metadata_body_text -> SPACE .)
    NEWLINE         reduce using rule 48 (non_metadata_body_text -> SPACE .)
    ATIMESTAMP      reduce using rule 48 (non_metadata_body_text -> SPACE .)
    ITIMESTAMP      reduce using rule 48 (non_metadata_body_text -> SPACE .)


state 9

    (49) non_metadata_body_text -> any_timestamp .

    SEPARATOR       reduce using rule 49 (non_metadata_body_text -> any_timestamp .)
    TEXT            reduce using rule 49 (non_metadata_body_text -> any_timestamp .)
    SPACE           reduce using rule 49 (non_metadata_body_text -> any_timestamp .)
    NEWLINE         reduce using rule 49 (non_metadata_body_text -> any_timestamp .)
    ATIMESTAMP      reduce using rule 49 (non_metadata_body_text -> any_timestamp .)
    ITIMESTAMP      reduce using rule 49 (non_metadata_body_text -> any_timestamp .)


state 10

    (7) org_tree -> heading .
    (8) org_tree -> heading . SEPARATOR

    STARS           reduce using rule 7 (org_tree -> heading .)
    $end            reduce using rule 7 (org_tree -> heading .)
    SEPARATOR       shift and go to state 24


state 11

    (37) any_timestamp -> ATIMESTAMP .

    SEPARATOR       reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    TEXT            reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    SPACE           reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    NEWLINE         reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    ATIMESTAMP      reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    ITIMESTAMP      reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    METADATA        reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    STARS           reduce using rule 37 (any_timestamp -> ATIMESTAMP .)
    $end            reduce using rule 37 (any_timestamp -> ATIMESTAMP .)


state 12

    (38) any_timestamp -> ITIMESTAMP .

    SEPARATOR       reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    TEXT            reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    SPACE           reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    NEWLINE         reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    ATIMESTAMP      reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    ITIMESTAMP      reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    METADATA        reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    STARS           reduce using rule 38 (any_timestamp -> ITIMESTAMP .)
    $end            reduce using rule 38 (any_timestamp -> ITIMESTAMP .)


state 13

    (11) heading -> headline . NEWLINE contents
    (12) heading -> headline . SEPARATOR

    NEWLINE         shift and go to state 25
    SEPARATOR       shift and go to state 26


state 14

    (13) headline -> STARS . SPACE comment todo priority title cookie tags

    SPACE           shift and go to state 27


state 15

    (1) org_file -> metadata org_tree .
    (9) org_tree -> org_tree . heading SEPARATOR
    (10) org_tree -> org_tree . heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 1 (org_file -> metadata org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 16

    (3) org_file -> metadata non_metadata_body_text . SEPARATOR org_tree
    (50) non_metadata_body_text -> non_metadata_body_text . TEXT
    (51) non_metadata_body_text -> non_metadata_body_text . SPACE
    (52) non_metadata_body_text -> non_metadata_body_text . any_timestamp
    (53) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (37) any_timestamp -> . ATIMESTAMP
    (38) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 28
    TEXT            shift and go to state 19
    SPACE           shift and go to state 20
    NEWLINE         shift and go to state 22
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12

    any_timestamp                  shift and go to state 21

state 17

    (9) org_tree -> org_tree heading . SEPARATOR
    (10) org_tree -> org_tree heading .

    SEPARATOR       shift and go to state 29
    STARS           reduce using rule 10 (org_tree -> org_tree heading .)
    $end            reduce using rule 10 (org_tree -> org_tree heading .)


state 18

    (2) org_file -> non_metadata_body_text SEPARATOR . org_tree
    (7) org_tree -> . heading
    (8) org_tree -> . heading SEPARATOR
    (9) org_tree -> . org_tree heading SEPARATOR
    (10) org_tree -> . org_tree heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    STARS           shift and go to state 14

    org_tree                       shift and go to state 30
    heading                        shift and go to state 10
    headline                       shift and go to state 13

state 19

    (50) non_metadata_body_text -> non_metadata_body_text TEXT .

    SEPARATOR       reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TEXT            reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    SPACE           reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    NEWLINE         reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ATIMESTAMP      reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ITIMESTAMP      reduce using rule 50 (non_metadata_body_text -> non_metadata_body_text TEXT .)


state 20

    (51) non_metadata_body_text -> non_metadata_body_text SPACE .

    SEPARATOR       reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TEXT            reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    SPACE           reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    NEWLINE         reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ATIMESTAMP      reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ITIMESTAMP      reduce using rule 51 (non_metadata_body_text -> non_metadata_body_text SPACE .)


state 21

    (52) non_metadata_body_text -> non_metadata_body_text any_timestamp .

    SEPARATOR       reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    TEXT            reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    SPACE           reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    NEWLINE         reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    ATIMESTAMP      reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)
    ITIMESTAMP      reduce using rule 52 (non_metadata_body_text -> non_metadata_body_text any_timestamp .)


state 22

    (53) non_metadata_body_text -> non_metadata_body_text NEWLINE .

    SEPARATOR       reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TEXT            reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    SPACE           reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    NEWLINE         reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ATIMESTAMP      reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ITIMESTAMP      reduce using rule 53 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)


state 23

    (6) metadata -> METADATA SEPARATOR .

    TEXT            reduce using rule 6 (metadata -> METADATA SEPARATOR .)
    SPACE           reduce using rule 6 (metadata -> METADATA SEPARATOR .)
    ATIMESTAMP      reduce using rule 6 (metadata -> METADATA SEPARATOR .)
    ITIMESTAMP      reduce using rule 6 (metadata -> METADATA SEPARATOR .)
    STARS           reduce using rule 6 (metadata -> METADATA SEPARATOR .)


state 24

    (8) org_tree -> heading SEPARATOR .

    STARS           reduce using rule 8 (org_tree -> heading SEPARATOR .)
    $end            reduce using rule 8 (org_tree -> heading SEPARATOR .)


state 25

    (11) heading -> headline NEWLINE . contents
    (28) contents -> . scheduling drawers body
    (35) scheduling -> . scheduling_data
    (36) scheduling -> . empty
    (29) scheduling_data -> . SCHEDULING SPACE any_timestamp NEWLINE
    (30) scheduling_data -> . SCHEDULING SPACE any_timestamp SEPARATOR
    (31) scheduling_data -> . SCHEDULING SPACE any_timestamp SPACE
    (32) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp NEWLINE
    (33) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp SEPARATOR
    (34) scheduling_data -> . scheduling_data SCHEDULING SPACE any_timestamp SPACE
    (63) empty -> .

    SCHEDULING      shift and go to state 35
    DRAWER          reduce using rule 63 (empty -> .)
    TEXT            reduce using rule 63 (empty -> .)
    SPACE           reduce using rule 63 (empty -> .)
    METADATA        reduce using rule 63 (empty -> .)
    ATIMESTAMP      reduce using rule 63 (empty -> .)
    ITIMESTAMP      reduce using rule 63 (empty -> .)
    SEPARATOR       reduce using rule 63 (empty -> .)
    STARS           reduce using rule 63 (empty -> .)
    $end            reduce using rule 63 (empty -> .)

    contents                       shift and go to state 31
    scheduling                     shift and go to state 32
    scheduling_data                shift and go to state 33
    empty                          shift and go to state 34

state 26

    (12) heading -> headline SEPARATOR .

    SEPARATOR       reduce using rule 12 (heading -> headline SEPARATOR .)
    STARS           reduce using rule 12 (heading -> headline SEPARATOR .)
    $end            reduce using rule 12 (heading -> headline SEPARATOR .)


state 27

    (13) headline -> STARS SPACE . comment todo priority title cookie tags
    (14) comment -> . COMMENT SPACE
    (15) comment -> . empty
    (63) empty -> .

    COMMENT         shift and go to state 37
    TODO            reduce using rule 63 (empty -> .)
    PRIORITY        reduce using rule 63 (empty -> .)
    TEXT            reduce using rule 63 (empty -> .)

    comment                        shift and go to state 36
    empty                          shift and go to state 38

state 28

    (3) org_file -> metadata non_metadata_body_text SEPARATOR . org_tree
    (7) org_tree -> . heading
    (8) org_tree -> . heading SEPARATOR
    (9) org_tree -> . org_tree heading SEPARATOR
    (10) org_tree -> . org_tree heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    STARS           shift and go to state 14

    org_tree                       shift and go to state 39
    heading                        shift and go to state 10
    headline                       shift and go to state 13

state 29

    (9) org_tree -> org_tree heading SEPARATOR .

    STARS           reduce using rule 9 (org_tree -> org_tree heading SEPARATOR .)
    $end            reduce using rule 9 (org_tree -> org_tree heading SEPARATOR .)


state 30

    (2) org_file -> non_metadata_body_text SEPARATOR org_tree .
    (9) org_tree -> org_tree . heading SEPARATOR
    (10) org_tree -> org_tree . heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 2 (org_file -> non_metadata_body_text SEPARATOR org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 31

    (11) heading -> headline NEWLINE contents .

    SEPARATOR       reduce using rule 11 (heading -> headline NEWLINE contents .)
    STARS           reduce using rule 11 (heading -> headline NEWLINE contents .)
    $end            reduce using rule 11 (heading -> headline NEWLINE contents .)


state 32

    (28) contents -> scheduling . drawers body
    (43) drawers -> . drawer_data
    (44) drawers -> . empty
    (39) drawer_data -> . DRAWER NEWLINE
    (40) drawer_data -> . DRAWER SEPARATOR
    (41) drawer_data -> . drawer_data DRAWER NEWLINE
    (42) drawer_data -> . drawer_data DRAWER SEPARATOR
    (63) empty -> .

    DRAWER          shift and go to state 43
    TEXT            reduce using rule 63 (empty -> .)
    SPACE           reduce using rule 63 (empty -> .)
    METADATA        reduce using rule 63 (empty -> .)
    ATIMESTAMP      reduce using rule 63 (empty -> .)
    ITIMESTAMP      reduce using rule 63 (empty -> .)
    SEPARATOR       reduce using rule 63 (empty -> .)
    STARS           reduce using rule 63 (empty -> .)
    $end            reduce using rule 63 (empty -> .)

    drawers                        shift and go to state 40
    drawer_data                    shift and go to state 41
    empty                          shift and go to state 42

state 33

    (35) scheduling -> scheduling_data .
    (32) scheduling_data -> scheduling_data . SCHEDULING SPACE any_timestamp NEWLINE
    (33) scheduling_data -> scheduling_data . SCHEDULING SPACE any_timestamp SEPARATOR
    (34) scheduling_data -> scheduling_data . SCHEDULING SPACE any_timestamp SPACE

    DRAWER          reduce using rule 35 (scheduling -> scheduling_data .)
    TEXT            reduce using rule 35 (scheduling -> scheduling_data .)
    SPACE           reduce using rule 35 (scheduling -> scheduling_data .)
    METADATA        reduce using rule 35 (scheduling -> scheduling_data .)
    ATIMESTAMP      reduce using rule 35 (scheduling -> scheduling_data .)
    ITIMESTAMP      reduce using rule 35 (scheduling -> scheduling_data .)
    SEPARATOR       reduce using rule 35 (scheduling -> scheduling_data .)
    STARS           reduce using rule 35 (scheduling -> scheduling_data .)
    $end            reduce using rule 35 (scheduling -> scheduling_data .)
    SCHEDULING      shift and go to state 44


state 34

    (36) scheduling -> empty .

    DRAWER          reduce using rule 36 (scheduling -> empty .)
    TEXT            reduce using rule 36 (scheduling -> empty .)
    SPACE           reduce using rule 36 (scheduling -> empty .)
    METADATA        reduce using rule 36 (scheduling -> empty .)
    ATIMESTAMP      reduce using rule 36 (scheduling -> empty .)
    ITIMESTAMP      reduce using rule 36 (scheduling -> empty .)
    SEPARATOR       reduce using rule 36 (scheduling -> empty .)
    STARS           reduce using rule 36 (scheduling -> empty .)
    $end            reduce using rule 36 (scheduling -> empty .)


state 35

    (29) scheduling_data -> SCHEDULING . SPACE any_timestamp NEWLINE
    (30) scheduling_data -> SCHEDULING . SPACE any_timestamp SEPARATOR
    (31) scheduling_data -> SCHEDULING . SPACE any_timestamp SPACE

    SPACE           shift and go to state 45


state 36

    (13) headline -> STARS SPACE comment . todo priority title cookie tags
    (16) todo -> . TODO SPACE
    (17) todo -> . empty
    (63) empty -> .

    TODO            shift and go to state 47
    PRIORITY        reduce using rule 63 (empty -> .)
    TEXT            reduce using rule 63 (empty -> .)

    todo                           shift and go to state 46
    empty                          shift and go to state 48

state 37

    (14) comment -> COMMENT . SPACE

    SPACE           shift and go to state 49


state 38

    (15) comment -> empty .

    TODO            reduce using rule 15 (comment -> empty .)
    PRIORITY        reduce using rule 15 (comment -> empty .)
    TEXT            reduce using rule 15 (comment -> empty .)


state 39

    (3) org_file -> metadata non_metadata_body_text SEPARATOR org_tree .
    (9) org_tree -> org_tree . heading SEPARATOR
    (10) org_tree -> org_tree . heading
    (11) heading -> . headline NEWLINE contents
    (12) heading -> . headline SEPARATOR
    (13) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 3 (org_file -> metadata non_metadata_body_text SEPARATOR org_tree .)
    STARS           shift and go to state 14

    heading                        shift and go to state 17
    headline                       shift and go to state 13

state 40

    (28) contents -> scheduling drawers . body
    (45) body -> . body_text
    (46) body -> . empty
    (54) body_text -> . TEXT
    (55) body_text -> . SPACE
    (56) body_text -> . METADATA
    (57) body_text -> . any_timestamp
    (58) body_text -> . body_text TEXT
    (59) body_text -> . body_text SPACE
    (60) body_text -> . body_text METADATA
    (61) body_text -> . body_text any_timestamp
    (62) body_text -> . body_text NEWLINE
    (63) empty -> .
    (37) any_timestamp -> . ATIMESTAMP
    (38) any_timestamp -> . ITIMESTAMP

    TEXT            shift and go to state 53
    SPACE           shift and go to state 54
    METADATA        shift and go to state 55
    SEPARATOR       reduce using rule 63 (empty -> .)
    STARS           reduce using rule 63 (empty -> .)
    $end            reduce using rule 63 (empty -> .)
    ATIMESTAMP      shift and go to state 11
    ITIMESTAMP      shift and go to state 12

    body                           shift and go to state 50
    body_text                      shift and go to state 51
    empty                          shift and go to state 52
    any_timestamp                  shift and go to state 56

state 41

    (43) drawers -> drawer_data .
    (41) drawer_data -> drawer_data . DRAWER NEWLINE
    (42) drawer_data -> drawer_data . DRAWER SEPARATOR
